[package]
name = "ratto-qemu"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ratto-kernel = { path = "../ratto-kernel" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15.4", features = ["instructions"] }

[target.'cfg(target_arch = "aarch_64")'.dependencies]
aarch64 = "0.0.14"
